--- a/randomox/Base.lproj/Main.storyboard
+++ b/randomox/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_7" orientation="portrait">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="mvF-ZZ-Mxf">
+    <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -20,57 +20,100 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="randomox" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="랜덤 OX" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QTR-Km-qXt">
-                                <rect key="frame" x="16" y="235" width="343" height="40"/>
+                                <rect key="frame" x="16" y="279" width="382" height="40"/>
                                 <fontDescription key="fontDescription" name="SDMiSaeng" family="Sandoll MiSaeng" pointSize="40"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Start" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rJW-wE-0ud">
-                                <rect key="frame" x="16" y="332" width="343" height="40"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Gq-ZV-z4R">
+                                <rect key="frame" x="16" y="375" width="382" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="FwS-05-VyP"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" name="SDMiSaeng" family="Sandoll MiSaeng" pointSize="40"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                                <state key="normal" title="Start">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="rjg-A0-gMR" kind="show" id="Z9q-GE-j9a"/>
+                                </connections>
+                            </button>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="Wf4-FP-XmW">
-                                <rect key="frame" x="45" y="387" width="285" height="20"/>
+                                <rect key="frame" x="45" y="425" width="324" height="32"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="로그인" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W93-d8-egB">
-                                        <rect key="frame" x="0.0" y="0.0" width="122.5" height="20"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6B4-Jy-ICt">
+                                        <rect key="frame" x="0.0" y="0.0" width="142" height="32"/>
                                         <fontDescription key="fontDescription" name="SDMiSaeng" family="Sandoll MiSaeng" pointSize="20"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="가입하기" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zuv-7y-qsy">
-                                        <rect key="frame" x="162.5" y="0.0" width="122.5" height="20"/>
+                                        <state key="normal" title="로그인">
+                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xLR-Ib-jBP">
+                                        <rect key="frame" x="182" y="0.0" width="142" height="32"/>
                                         <fontDescription key="fontDescription" name="SDMiSaeng" family="Sandoll MiSaeng" pointSize="20"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
+                                        <state key="normal" title="가입하기">
+                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                    </button>
                                 </subviews>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="Wf4-FP-XmW" firstAttribute="top" secondItem="rJW-wE-0ud" secondAttribute="bottom" constant="15" id="3v8-ec-Fqs"/>
                             <constraint firstItem="Wf4-FP-XmW" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="45" id="60p-gm-QEJ"/>
                             <constraint firstItem="QTR-Km-qXt" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="7lT-gu-OTg"/>
                             <constraint firstItem="QTR-Km-qXt" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="215" id="9qP-Y3-Xus"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="QTR-Km-qXt" secondAttribute="trailing" constant="16" id="NWU-DQ-uhE"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="rJW-wE-0ud" secondAttribute="trailing" constant="16" id="RIv-nD-vrn"/>
-                            <constraint firstItem="rJW-wE-0ud" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="fTY-f1-hDw"/>
+                            <constraint firstItem="2Gq-ZV-z4R" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="RJt-ma-hb4"/>
+                            <constraint firstItem="2Gq-ZV-z4R" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" constant="-16" id="YZW-zO-syJ"/>
+                            <constraint firstItem="Wf4-FP-XmW" firstAttribute="top" secondItem="2Gq-ZV-z4R" secondAttribute="bottom" constant="10" id="ZcZ-y2-wYb"/>
                             <constraint firstAttribute="trailing" secondItem="Wf4-FP-XmW" secondAttribute="trailing" constant="45" id="iha-bp-Ab5"/>
-                            <constraint firstItem="rJW-wE-0ud" firstAttribute="top" secondItem="QTR-Km-qXt" secondAttribute="bottom" constant="57" id="xtU-FN-Cao"/>
+                            <constraint firstItem="2Gq-ZV-z4R" firstAttribute="top" secondItem="QTR-Km-qXt" secondAttribute="bottom" constant="56" id="zGL-ya-FZ7"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="AgV-7w-TAP"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="136.80000000000001" y="137.18140929535232"/>
+            <point key="canvasLocation" x="1043.4782608695652" y="136.95652173913044"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="lVi-5e-dHu">
+            <objects>
+                <viewController id="rjg-A0-gMR" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="h6q-h9-NAl" customClass="OXView">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="WGE-MN-DMT"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4eP-K9-HTR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1823" y="137"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Iob-Yl-RfB">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="mvF-ZZ-Mxf" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="X7p-Zf-erF">
+                        <rect key="frame" x="0.0" y="20" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="uZr-v3-qzf"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="edd-TQ-1qq" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="136.23188405797103" y="136.95652173913044"/>
         </scene>
     </scenes>
 </document>
